sw/inc/comcore.hxx
@@ -45,8 +45,10 @@
 #define STR_AUTOFMTREDL_NON_BREAK_SPACE         21
 #define STR_AUTOFMTREDL_TRANSLITERATE_RTL       22
 #define STR_AUTOFMTREDL_DETECT_DOI              23
+#define STR_AUTOFMTREDL_ITALIC                  24
+#define STR_AUTOFMTREDL_STRIKETHROUGH           25
 // !!!!!!!!!!!!!!!!!!!!!!!!!!  always set the correct end !!!!!!!!!!!!
-#define STR_AUTOFMTREDL_END                     24
+#define STR_AUTOFMTREDL_END                     26
 
 #endif
 
